--- a/wave-homepage/cssindex.css
+++ b/wave-homepage/cssindex.css
@@ -13,7 +13,7 @@ ul{
 }
 
 a{
-  color:cyan;
+  color:C4D8A2;
   text-decoration: none;
 }
 
@@ -117,18 +117,18 @@ a{
 .enter a{
   text-decoration: none;
   font-family: Helvetica;
-  color:white;
+  color:black;
 }
 
 .outter-enter{
-  border:solid black 1px;
+  border:solid lightgrey .5px;
 position: absolute;
 width: 80px;
 height: 27px;
 top: 294px;
 left: 626px;
 border-radius: 5px;
-background: linear-gradient(to bottom, #b3eced 0%,#29e5dc 54%,#29e5dc 73%,#bceeee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: white
 }
 .login{
   position: absolute;
