--- a/wave-homepage/cssindex.css
+++ b/wave-homepage/cssindex.css
@@ -3,6 +3,7 @@ body{
   color: white;
   text-shadow: 1px 1px 2px black;
   margin: auto;
+  overflow: hidden;
   }
 
 ul{
@@ -81,7 +82,7 @@ a{
   color: white;
   padding-right: 2px;
   position: absolute;
-  left: 1050px;
+  left: 1030px;
   bottom:6px;
   font-size: 12px;
 }
@@ -90,7 +91,7 @@ a{
   background-image: url(dreams-reality-girl-dock.jpg);
   position: relative;
 	margin-bottom: 0px;
-	background-size: cover;
+	background-size:cover;
 	height: 678px;
 }
 
